Encoded HasCrCard, IsActiveMember, Exited

--- a/Bank Data.ipynb
+++ b/Bank Data.ipynb
@@ -6622,7 +6622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -8063,7 +8063,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Since we transformed the values into integers in the previous step, we already transformed this field as a category. Since it doesn't have any order relationship we will transform these as categorical values but without any order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=[0, 1, 2], ordered=False)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.HasCrCard = df_bank.HasCrCard.astype(pd.CategoricalDtype())\n",
+    "df_bank.HasCrCard.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### `IsActiveMember`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.IsActiveMember.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    5105\n",
+       "0    4812\n",
+       "2      83\n",
+       "Name: IsActiveMember, dtype: int64"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.IsActiveMember.value_counts(dropna = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same situation as with `HasCrCard`. Same solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=[0, 1, 2], ordered=False)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.IsActiveMember = df_bank.IsActiveMember.astype(pd.CategoricalDtype())\n",
+    "df_bank.IsActiveMember.dtypes"
    ]
   },
   {
@@ -8071,6 +8170,76 @@
    "metadata": {},
    "source": [
     "#### `Exited`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.Exited.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    7963\n",
+       "1    2037\n",
+       "Name: Exited, dtype: int64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.Exited.value_counts(dropna = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, this is already a boolean category itself in the format of an integer (True / False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=[0, 1], ordered=False)"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bank.Exited = df_bank.Exited.astype(pd.CategoricalDtype())\n",
+    "df_bank.Exited.dtypes"
    ]
   },
   {
