Some presentational tweaks

--- a/Bank Data - Preprocessing.ipynb
+++ b/Bank Data - Preprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![Nuclio logo](https://nuclio.school/wp-content/uploads/2018/12/nucleoDS-newBlack.png)\n",
     "\n",
-    "# Bank Data"
+    "# Bank Data - Data Preprocessing"
    ]
   },
   {
