--- a/Bank Data - Preprocessing.ipynb
+++ b/Bank Data - Preprocessing.ipynb
@@ -434,7 +434,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Pre-processing"
+    "## Data Pre-processing\n",
+    "\n",
+    "Initial observation of the table: we have approx 10k samples of what appears to be customer data relating to financial concepts. There are no time based fields or product related IDs so we can assume there should be one row per customer. \n",
+    "\n",
+    "Columns like geography and gender look like simple cases for categorical one-hot encoding. Several columns in the dataframe look like they might unecessarily be assigned as floats. Of all the columns, \"isActiveMember\" and \"Exited\" are those which will need to be further explored once the data is cleaned as the concepts are not clear (the first 4 rows present every combination between the two columns, so somehow an active member can also be exited).\n",
+    "\n",
+    "We will check the duplicates and columns one by one to verify these assumptions and prepare the dataset for further analysis."
    ]
   },
   {
@@ -1427,7 +1433,7 @@
    "source": [
     "The dataset contains duplicate indices, which means that there's still some duplicate data. By inspecting the previous entries, we see that these refer to the same CustomerId, and the column that we used as an index is also repeated, which means several things:\n",
     "\n",
-    "- It is required to further study what to do with these duplicated entries as it seems that several data columns are equal per row, but other fields have NaNs that can be merged to turn these 2 entries into a single complete one. The candidate column to merge by will be the `CustomerId` as it seems to be unique and common for both duplicated entries (as we will analyse in the upcoming cells). For example, with `CustomerId` = 15615096 (`Surname = \"Costa\"`), the first age entry (NaN) can be merged with the second (31.0), as well as the balance from the first entry (0.00) can be merged into the second (NaN)\n",
+    "- It is required to further study what to do with these duplicated entries as it seems that several data columns are equal per row, but other fields have NaNs that can be merged to turn these 2 entries into a single complete one. The candidate column to merge by will be the `CustomerId` as it seems to be unique and common for both duplicated entries (as we will analyse in the upcoming cells). For example, with `CustomerId` = 15615096 (`Surname = \"Costa\"`), the first age entry (NaN) can be merged with the second (31.0), as well as the balance from the first entry (0.00) can be merged into the second (NaN). We also have no fields (time, product id) which could make us think there should be more than one row per customer.\n",
     "- We need to reset the indices to have unique indices for each table entry\n",
     "- Definitely remove this column as it's not providing any relevance into our dataset and is doing a poor memory usage"
    ]
@@ -2768,7 +2774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the description, we see that the minimum (350) is inside the 300 - 850 range, but the maximum 2924 is not, so we may have some outliers we'll analyze later. Nothing else looks weird by looking into the general data description."
+    "From the description, we see that the minimum (350) is inside the 300 - 850 range, but the maximum 2924 is not (the decimal places also make it look erroneous), so we may have some outliers we'll analyze later. Nothing else looks weird by looking into the general data description."
    ]
   },
   {
@@ -3438,7 +3444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These 2 outliers seem to have other valuable data that we could use. We will fill the outliers and the nulls with the mean values of the other correct values within the interval"
+    "These 2 outliers seem to have other valuable data that we could use. We will fill the outliers and the nulls with the mean values of the other correct values within the interval. We will assign the mean (rather than median or other) as the distribution of correct values is reasonably symmetrical."
    ]
   },
   {
@@ -3918,7 +3924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The not specified Gender is a small category but it can't be despised."
+    "The not specified Gender is a small category but it can't be ignored."
    ]
   },
   {
@@ -4167,7 +4173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 2 clear ranges of outliers, the negative values (below 14) and the ones beyond 62. As we can see, the IQR is pretty thin and values go quite beyond that age, starting at 62. These can be dangerous as they can affect a model and need to be removed."
+    "There are 2 clear ranges of outliers, the negative values (below 14) and the ones beyond 62. As we can see, the IQR is pretty thin and values go quite beyond that age, starting at 62. These can be dangerous as they can affect a model and need to be removed. At the same time these are realistic ages and there is a chance that they could be valuable to further analysis. For this task we will directly apply our calculated outlier limits, and replace all ages that exceed this range. We will use the age median to replace outliers due to the asymmetrical distribution."
    ]
   },
   {
@@ -4693,7 +4699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the end, `Tenure` only has 11 possible values, Even if we have integers, these could be treated as a category if we wanted to use ranges of years. However, inn this case, we will be treating it as a continuous discrete value."
+    "In the end, `Tenure` only has 11 possible values, Even if we have integers, these could be treated as a category if we wanted to use ranges of years. However, in this case, we will be treating it as a continuous discrete value."
    ]
   },
   {
@@ -4839,7 +4845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By inspecting the histograms we see that there may bee quite huge outliers, as in the first histogram, it ranges up to 1.0e6, but all values concentrate below 0.4e6. Plus, we see a lot of values concentrated in the first bin, mainly around 0.0 ((the minimum and the fact that we have 3555 entries with 0.00). Nonetheless, until we use a boxplot to inspect the outliers we won't have more info to go on with what to do with Nulls."
+    "By inspecting the histograms we see that there may be quite huge outliers, as in the first histogram, it ranges up to 1.0e6, but all values concentrate below 0.4e6. Plus, we see a lot of values concentrated in the first bin, mainly around 0.0 ((the minimum and the fact that we have 3555 entries with 0.00). Nonetheless, until we use a boxplot to inspect the outliers we won't have more info to go on with what to do with Nulls."
    ]
   },
   {
